// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#gremlins/components/field <CheckField /> With additional props renders 1`] = `
<input
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
/>
`;

exports[`#gremlins/components/field <CheckField /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;

exports[`#gremlins/components/field <Field /> With additional props renders 1`] = `
<input
  accessKey="MOCK ACCESS KEY"
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  tabIndex={1}
/>
`;

exports[`#gremlins/components/field <Field /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;

exports[`#gremlins/components/field <ValueField /> With additional props renders 1`] = `
<input
  accessKey="MOCK ACCESS KEY"
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  tabIndex={1}
/>
`;

exports[`#gremlins/components/field <ValueField /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;
